<resources>
    <string name="app_name_en">Users Accounts DB App</string>
    <string name="app_name_fr">Comptes Utilisateurs BD App</string>
    <string name="usersListTitle">Utilisateurs</string>
    <string name="parametres_menu_title">Paramètres</string>
    <string name="deconnexion_menu_tilte">Déconnexion</string>
    <string name="dashboard_title_fr">Tableau de bord</string>
    <string name="addUserFAB_text">Ajouter</string>
    <string name="back">Retour</string>
    <string name="connectedUser">"Connecté: "</string>
    <string name="login_email_hint">Courriel</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_connect_btn_text">Se connecter</string>
    <string name="login_register_btn_text">S\'inscrire</string>
    <string name="icone_content_description">statut usager</string>
    <string name="signup_email_hint">Courriel</string>
    <string name="signup_password_hint">Mot de passe</string>
    <string name="signup_register_btn_text">S\'inscrire</string>
    <string name="courriel_provenance_hint">De:</string>
    <string name="courriel_destination_hint">Pour:</string>
    <string name="courriel_sujet_hint">Sujet:</string>
    <string name="courriel_texte_hint">Texte:</string>
    <string name="courriel_envoyer_btn_text">Envoyer</string>
    <string name="sujet_courriel_test">Sujet du courriel: Test</string>
    <string name="texte_courriel_test">Texte du courriel: Test</string>
    <string name="usager_titre">Usager</string>
    <string name="usager_prenom">Prénom</string>
    <string name="usager_nom">Nom</string>
    <string name="usager_surnom">Surnom</string>
    <string name="usager_naissance">Naissance</string>
    <string name="usager_naissance_hint">aaaa-mm-jj</string>
    <string name="usager_profession">Profession</string>
    <string name="usager_courriel">Courriel *</string>
    <string name="usage_password">Mot de passe *</string>
    <string name="usager_pin">PIN</string>
    <string name="usager_pin_hint">4 chiffres secrets</string>
    <string name="usager_permissions">Permissions</string>
    <string name="usager_permissions_hint">Combinaisons crud</string>
    <string name="usager_estAdmin">Est Admin?</string>
    <string name="usager_estValide">Est valide?</string>
    <string name="usager_adresse_titre">Adresse</string>
    <string name="usager_adresse_numero">Numéro</string>
    <string name="usager_adresse_rue">Rue</string>
    <string name="usager_adresse_ville">Ville</string>
    <string name="usager_adresse_province">Province</string>
    <string name="usager_adresse_codepostal">Code Postal</string>
    <string name="usager_adresse_pays">Pays</string>
    <string name="courriel_support_usager">support@support.com</string>

</resources>