<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourrielActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <!-- Champ Provenance -->
        <EditText
            android:id="@+id/etProvenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/courriel_provenance_hint"
            android:inputType="textEmailAddress" />

        <!-- Champ Destination -->
        <EditText
            android:id="@+id/etDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/courriel_destination_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <!-- Champ Sujet -->
        <EditText
            android:id="@+id/etSujet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/courriel_sujet_hint"
            android:inputType="text"
            android:layout_marginTop="16dp" />

        <!-- Champ Texte -->
        <EditText
            android:id="@+id/etTexte"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/courriel_texte_hint"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnEnvoyerCourriel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/courriel_envoyer_btn_text"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>