<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <!-- Champ de saisie pour l'e-mail -->
    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="16sp" />

    <!-- Champ de saisie pour le mot de passe -->
    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="16sp" />

    <!-- Bouton d'inscription -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signup_register_btn_text"
        android:textSize="18sp" />

</LinearLayout>

